src/test/ui/hr-subtype/hr-subtype.bound_inv_a_b_vs_bound_inv_a.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter 'a in generic type due to conflicting requirements
  --> $DIR/hr-subtype.rs:39:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^
...
LL | / check! { bound_inv_a_b_vs_bound_inv_a: (for<'a,'b> fn(Inv<'a>, Inv<'b>),
LL | |                                         for<'a>    fn(Inv<'a>, Inv<'a>)) }
   | |__________________________________________________________________________- in this macro invocation
   |
   = note: first, the lifetime cannot outlive lifetime RePlaceholder(Placeholder { universe: U1, name: BrNamed(crate0:DefIndex(1:25), 'a) })...
   = note: ...but the lifetime must also be valid for lifetime RePlaceholder(Placeholder { universe: U1, name: BrNamed(crate0:DefIndex(1:26), 'b) })...
   = note: ...so that the expression is assignable:
           expected std::option::Option<for<'a, 'b> fn(Inv<'a>, Inv<'b>)>
              found std::option::Option<for<'a> fn(Inv<'a>, Inv<'a>)>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
